2011-03-16  Sancho Lerena <slerena@artica.es>

	* include/functions_db.php: Another bug solved in check_incident_sla_min_response.

	* api.php,
	functions_api.php: get_stats() need user to run the filter.

2011-03-16  Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_api.php, include/api.php: Fixed a bug with parameters
	and toke in get_stats function. Also replaced split by explode, because split
	is deprecated.

2011-03-16  Sancho Lerena <slerena@artica.es>
	
	* include/integria_cron.php: Fixed the way on how min_response
	sla is checked (was a bug, because it looks for incident creator
	not incident owner).

	* include/functions_db.php: SLA compliance checks ONLY list of 
	incidents passed as a filter. Fixed SLA min_response (see above)

	* include/functions_api.php: Minor changes in create incident API

	* operation/incidents/incident_detail.php: Non-privileged users 
	have disbled SLA in incident insertion by default, fixed.

	* include/functions_incidents.php: Search now works with incident ID.

2011-03-15  Sancho Lerena <slerena@artica.es>

	* integria_db.sql: Removed a reference on database table tevent
	(broken when uses non-existant users like SYSTEM.

	* configurar_usuarios.php: Fixed problems editing data.

	* integria_cron.php: Fixed run_mail_queue() problems on error
	exception management.

	* functions_incidents.php: Added get_incident_stats() function
	to provide API a quick way to get filtered stat data. In the future
	this function should provide info for other parts of code, like
	the reporting.

	* functions.php: integria_sendmail() was sending mails with spaces
	in the RCPT field :-S... now is fixed by using a prober trim with
	safe output function (was not working due the encoding).

	* functions_api.php: Added api_get_stats().

	* api.php: Added get_stats() method, and fixed the way on how the
	include is loaded. Always uses absolute path load to avoid security
	problems!.

2011-03-15  Sergio Martin <sergio.martin@artica.es>
